--- a/frontend/index.css
+++ b/frontend/index.css
@@ -22,6 +22,10 @@ body {
     border: 5px solid black;
 }
 
+.border-radius {
+    border-radius: 25%;
+}
+
 #home {
     height: 200px;
     width: 100%;
