Basic addition and creation of nav bar

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -49,3 +49,10 @@ body {
     width: 450px;
     height: 80%;
 }
+
+/*Navbar*/
+#navbar {
+    height: 80px;
+    background-color: #131010;
+    color: white;
+}
