--- a/frontend/index.css
+++ b/frontend/index.css
@@ -55,4 +55,11 @@ body {
     height: 80px;
     background-color: #131010;
     color: white;
+    justify-content: space-around;
+}
+
+.nav-elem {
+    height: 55%;
+    width: 10%;
+    background-color: cyan;
 }
