Creating text shadow class

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -31,6 +31,11 @@ body {
     border-radius: 25%;
 }
 
+/*Creating a class for text shadow*/
+.text-shadow {
+    text-shadow: 2px 5px 3px #131010;
+}
+
 /*----------------------------------------------------*/
 /*----------------------------------------------------*/
 
