--- a/frontend/class.css
+++ b/frontend/class.css
@@ -24,5 +24,9 @@
     text-shadow: 2px 5px 3px #131010;
 }
 
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
 /*----------------------------------------------------*/
 /*----------------------------------------------------*/
