Adding grid and removing flex-wrap

--- a/frontend/class.css
+++ b/frontend/class.css
@@ -28,5 +28,13 @@
     flex-wrap: wrap;
 }
 
+/*Grid*/
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 50px;
+}
+
 /*----------------------------------------------------*/
 /*----------------------------------------------------*/
