--- a/frontend/index1.css
+++ b/frontend/index1.css
@@ -7,3 +7,10 @@
     width: 100%;
     background-color: rgba(62, 59, 59, 0.792);
 }
+
+.innermodal {
+    background-color: red;
+    height: 85vh;
+    width: 100%;
+    margin: 0vh 5vw;
+}
